--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="education">
                     <h3>Образование</h3>
                     <ul class="education-list">
-                        <li class="education-list__item">Специалист техник</li>
+                        <li class="education-list__item">Специалист по компьютерным системам</li>
                         <li class="education-list__item">Кафедра естественно научных <br>дисциплин</li>
                         <li class="education-list__item">Высший колледж информатики</li>
-                        <li class="education-list__item">2019 - current</li>
+                        <li class="education-list__item">2019 - 2023</li>
                         <li class="education-list__item">Новосибирск</li>
                     </ul>
                 </div>
@@ -60,15 +60,52 @@
         </div>
 
         <aside class="aside">
-            <h3>О себе</h3>
-            <p class="resume-description">
-                Я творческий Frontend разработчик, готовый применить свои навыки для решения технических задач компании. Предан цели обеспечения успеха команды и стремлюсь к разработке эффективных решений для работы на JS и других языках программирования. Хороший командный игрок, готовый к адаптации и постоянному совершенствованию. Верю, что могу быть полезным членом вашей команды.
-            </p>
-            <br>
-            <h3>Опыт работы</h3>
-            <p class="resume-description">
-                Нет официального опыта работы
-            </p>
+            <div class="content-block">
+                <h3>О себе</h3>
+                <p class="resume-description">
+                    Я творческий Frontend разработчик, готовый применить свои навыки для
+                    решения технических задач компании. Предан цели обеспечения успеха
+                    команды и стремлюсь к разработке эффективных решений для работы
+                    на JS и других языках программирования. Хороший командный игрок,
+                    готовый к адаптации и постоянному совершенствованию.
+                    Верю, что могу быть полезным членом вашей команды.
+                </p>
+            </div>
+            <div class="content-block">
+                <h3>Мои проекты</h3>
+                <p class="resume-description">
+                    Небольшой Landing сайт для стоматологической клиники "Здоровье 1"
+                </p>
+                <span>Используемые технологии: </span>
+                <ol class="resume-description__list">
+                    <li class="resume-description__list-item">HTML</li>
+                    <li class="resume-description__list-item">CSS</li>
+                    <li class="resume-description__list-item">2GIS API</li>
+                </ol>
+                <span>Репозиторий: </span>
+                <a href="https://github.com/Skaletti/health-1">https://github.com/Skaletti/health-1</a>
+            </div>
+            <div class="content-block">
+                <p class="resume-description">Сайт дипломный проект, который я писал на заказ посвященный марсоходам.
+                    В разработке использовалось открытое NASA API
+                </p>
+                <span>Используемые технологии: </span>
+                <ol class="resume-description__list">
+                    <li class="resume-description__list-item">Vue 3</li>
+                    <li class="resume-description__list-item">SCSS</li>
+                    <li class="resume-description__list-item">JS/TS</li>
+                    <li class="resume-description__list-item">Element Plus</li>
+                    <li class="resume-description__list-item">Axios</li>
+                </ol>
+                <span>Репозиторий: </span>
+                <a href="https://github.com/Skaletti/VeraNasaAPI">https://github.com/Skaletti/VeraNasaAPI</a>
+            </div>
+            <div class="content-block">
+                <h3>Опыт работы</h3>
+                <p class="resume-description">
+                    Нет официального опыта работы
+                </p>
+            </div>
         </aside>
     </div>
 </body>
