--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
                 <a href="https://github.com/Skaletti/VeraNasaAPI">https://github.com/Skaletti/VeraNasaAPI</a>
             </div>
             <div class="content-block">
+                <p class="resume-description">
+                    Care-bout - landing сайт, верстал на заказ.
+                </p>
+                <span>Используемые технологии: </span>
+                <ol class="resume-description__list">
+                    <li class="resume-description__list-item">JS</li>
+                    <li class="resume-description__list-item">CSS</li>
+                    <li class="resume-description__list-item">JS</li>
+                </ol>
+                <span>Репозиторий: </span>
+                <a href="https://github.com/Skaletti/VeraNasaAPI">https://github.com/Skaletti/care-bout</a>
+            </div>
+            <div class="content-block">
                 <h3>Опыт работы</h3>
                 <p class="resume-description">
                     Нет официального опыта работы
